Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-828

Query against Avro table crashes Impala with codegen enabled.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.2.3
    • Impala 1.2.4
    • None
    • None

    Description

      This query crashes Impala with codegen enabled:

      select timestamp_col from functional_avro.alltypesagg where timestamp_col < cast('2010-01-01 01:05:20' as timestamp)
      

      With codegen disabled everything works fine.

      Attachments

        Activity

          People

            nong_impala_60e1 Nong Li
            alex.behm Alexander Behm
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: