IMPALA-828: Fix avro codegen if conjuncts cannot be codegend.

Change-Id: I9ff0214e541eb958132fbe5b7798883db91ef025
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1695
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins